Fix of the Chatbox size to avoid double scrollbar

--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -139,7 +139,7 @@
 
 .chatInput {
   position: sticky;
-  flex: 0 0 100px;
+  flex: 0 0 180px;
   padding-top: 12px;
   padding-bottom: 24px;
   padding-left: 24px;
